fixed vertical aligning on profile button in new user welcome

--- a/app/sass/entries/_new_user_welcome.sass
+++ b/app/sass/entries/_new_user_welcome.sass
@@ -47,7 +47,7 @@
       +center
       width: 223px
       height: 42px
-      line-height: 40px
+      line-height: 41px
       margin: 0 4px 4px 0
       color: #222
       +shine-light(20)
@@ -55,7 +55,7 @@
 
       .img
         display: inline-block
-        height: 42px
+        height: 41px
         width: 32px
         margin: 0 8px -16px 0
 
@@ -74,6 +74,9 @@
         +alpha(30)
         +font(36)
         +bold
+        +block
+        +left
+        margin: 0 -20px 0 28px
 
       .dreamfield
         @extend .dream-32-hover
